2005-10-28  Brian Cameron  <brian.cameron@sun.com>

        * daemon/display.c: If the slave doesn't
          respond to a SIGTERM, try SIGKILL the second
          time.  GDM has a problem where it will
          sometimes stop managing a display because
          it just keeps waiting for a slave to die
          after sending it a SIGTERM.  Some users
          have found that this patch works around
          the problem of a child ignoring SIGTERM.
          Patch provided by Vaclav Smilauer
          <eudoxos@arcig.cz>.  Fixes bug #113902.

2005-10-28  Brian Cameron  <brian.cameron@sun.com.

        * gui/gdmlogin.c,
          gui/greeter/greeter_item_capslock.c: Patch to
          make GDM warn correctly about caps lock if an
          alternative keymap is enabled.  Now use
          kbGetState instead of XkbGetIndicatorState.
          Fixes bug #317732.  Patch provided by
          Sebastien Bacher <seb128@debian.org>.

2005-10-27  Erdal Ronahi  <erdal.ronahi@gmail.com>

        * daemon/slave.c: Fix race condition where the d
          variable wasn't being set until after the signal
          handlers, and the signal handlers make use of
          this variable.  Now set it before to ensure it
          is set whenever a signal might be received.
          Issue pointed out by Simon Bowden on
          gdm-list@gnome.org

2005-10-14  Brian Cameron <Brian.Cameron@sun.com>

        * gui/gdmlogin.c: No longer set tooltips for menu
          items in gdmlogin.  These are distracting, and
          do not work with accessibility.  After talking
          with Owen Taylor at the GNOME Boston Summit, he
          said no GNOME programs do this, and it is not
          recommended.  Fix for bug #144869.
        * gui/gdmchooser.c:  Now use gdm_common_setup_cursor
          instead of its own copy of the same function.
        * gui/gdmcommon.[ch]: gdmlogin, gdmgreeter and gdmchooser
          were all using their own functions to set the background