@@ -1,3 +1,9 @@
+2005-11-03  Brian Cameron  <brian.cameron@sun.com>
+
+        * daemon/getvt.c: Patch to make GDM use VT_GETSTATE for
+          peeking VT freeness.  Patch provided by Samuel Thibault
+          <samuel.thibault@ens-lyon.org>.  Fixes bug #315313.
+
 2005-10-28  Brian Cameron  <brian.cameron@sun.com>
 
         * daemon/display.c: If the slave doesn't
